--- a/profile.html
+++ b/profile.html
@@ -35,7 +35,7 @@
                 <!-- Right - Navigation -->
                 <nav class="flex items-center space-x-4">
                     <a href="index.html" class="text-white hover:text-blue-200">Home</a>
-                    <a href="books.html" class="text-white hover:text-blue-200">Profile</a>
+                    <a href="books.html" class="text-white hover:text-blue-200">Books</a>
                     <button id="logout" class="bg-white text-blue-600 px-3 py-1 rounded hover:bg-blue-100">
                         Logout
                     </button>
