--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
                 </div>
     
                 <!-- Center - Page Title -->
-                <h1 class="text-2xl font-bold">Books</h1>
+                <h1 class="text-2xl font-bold">Profile Dashboard</h1>
     
                 <!-- Right - Navigation -->
                 <nav class="flex items-center space-x-4">
