--- a/books.html
+++ b/books.html
@@ -106,7 +106,7 @@
                 </div>
     
                 <!-- Center - Page Title -->
-                <h1 class="text-2xl font-bold">Books</h1>
+                <h1 class="text-2xl font-bold">Books Catalog</h1>
     
                 <!-- Right - Navigation -->
                 <nav class="flex items-center space-x-4">
