--- a/books.html
+++ b/books.html
@@ -128,6 +128,9 @@
             <button data-section="search-books" class="nav-link text-blue-600 hover:text-blue-800">
                 Search Books
             </button>
+            <button data-section="my-bookmarks" class="nav-link text-blue-600 hover:text-blue-800 user-only hidden">
+                My Bookmarks
+            </button>
             <button data-section="book-suggestions" class="nav-link text-blue-600 hover:text-blue-800 user-only hidden">
                 Book Suggestions
             </button>
@@ -136,6 +139,9 @@
             </button>
             <button data-section="system-statistics" class="nav-link text-blue-600 hover:text-blue-800 admin-only hidden">
                 System Statistics
+            </button>
+            <button data-section="review-management" class="nav-link text-blue-600 hover:text-blue-800 admin-only hidden">
+                Review Management
             </button>
         </nav>
         <!-- View Books Section -->
