--- a/books.html
+++ b/books.html
@@ -107,7 +107,7 @@
                     </a>
                     
                     <!-- Always show Books link -->
-                    <a href="profile.html" class="px-4 py-2 rounded-lg bg-blue-500 bg-opacity-30 hover:bg-opacity-40">
+                    <a href="profile.html" class="px-4 py-2 rounded-lg bg-blue-500 bg-opacity-30 hover:bg-opacity-40 hidden">
                         <i class="fas fa-book mr-2"></i>Profile Dashboard
                     </a>
                     
