--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <p class="text-blue-100 mt-1">Your gateway to knowledge</p>
                 </div>
                 <nav class="flex items-center space-x-4 nav-buttons">
-                    <a href="profile.html" class="px-4 py-2 rounded-lg bg-blue-500 bg-opacity-20 hover:bg-opacity-30 hidden" id="profile-link">
+                    <a href="books.html" class="px-4 py-2 rounded-lg bg-blue-500 bg-opacity-20 hover:bg-opacity-30 hidden" id="profile-link">
                         <i class="fas fa-user mr-2"></i>Profile
                     </a>
                     <a href="books.html" class="px-4 py-2 rounded-lg bg-blue-500 bg-opacity-20 hover:bg-opacity-30 hidden" id="books-link">
