--- a/books.html
+++ b/books.html
@@ -107,8 +107,8 @@
                     </a>
                     
                     <!-- Always show Books link -->
-                    <a href="profile.html" class="px-4 py-2 rounded-lg bg-blue-500 bg-opacity-30 hover:bg-opacity-40 hidden">
-                        <i class="fas fa-book mr-2"></i>Profile Dashboard
+                    <a href="books.html" class="px-4 py-2 rounded-lg bg-blue-500 bg-opacity-30 hover:bg-opacity-40 hidden">
+                        <i class="fas fa-book mr-2"></i>Books Dashboard
                     </a>
                     
                     <!-- Show Logout when logged in -->
