--- a/user.html
+++ b/user.html
@@ -29,7 +29,7 @@
   </div>
 
   <!-- External Firebase Config -->
-  <script src="/js/firebaseConfig.js"></script>
+  <script src="https://avihs-g.github.io/digital-library-system/js/firebaseConfig.js"></script>
   
   <script>
     // DOM elements
