--- a/user.html
+++ b/user.html
@@ -134,7 +134,7 @@
     </footer>
 
     <!-- Firebase Config -->
-    <script src="js/firebaseConfig.js"></script>
+    <script src="https://avihs-g.github.io/digital-library-system/js/firebaseConfig.js"></script>
 
     <!-- Profile Script -->
     <script>
