--- a/user.html
+++ b/user.html
@@ -74,10 +74,16 @@
         <section id="profile-dashboard" class="section-content">
             <div class="bg-white rounded-xl shadow-md overflow-hidden section-card">
                 <div class="p-6">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-6">Profile Dashboard</h2>
+                    <div class="flex justify-between items-center mb-6">
+                        <h2 class="text-2xl font-bold text-gray-800">Profile Dashboard</h2>
+                        <button id="toggleEditBtn" class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">
+                            <i class="fas fa-edit mr-2"></i>Edit Profile
+                        </button>
+                    </div>
                     
                     <!-- Profile Content -->
                     <div id="profileContent">
+                        <!-- Loading state -->
                         <div class="text-center py-12">
                             <div class="inline-block animate-spin rounded-full h-8 w-8 border-t-2 border-b-2 border-blue-500 mb-4"></div>
                             <p class="text-gray-600">Loading profile...</p>
