--- a/user.html
+++ b/user.html
@@ -71,6 +71,7 @@
         </div>
 
         <!-- Profile Dashboard Section -->
+        <!-- Inside your existing HTML file, replace the profile section with this: -->
         <section id="profile-dashboard" class="section-content">
             <div class="bg-white rounded-xl shadow-md overflow-hidden section-card">
                 <div class="p-6">
@@ -81,7 +82,7 @@
                         </button>
                     </div>
                     
-                    <!-- Profile Content -->
+                    <!-- Profile Content (Will be loaded via JavaScript) -->
                     <div id="profileContent">
                         <!-- Loading state -->
                         <div class="text-center py-12">
