--- a/books.html
+++ b/books.html
@@ -105,7 +105,10 @@
                     <a href="index.html" class="px-4 py-2 rounded-lg bg-blue-500 bg-opacity-20 hover:bg-opacity-30">
                         <i class="fas fa-home mr-2"></i>Home
                     </a>
-                    
+                    <!-- Always show Profile link -->
+                    <a href="profile.html" class="px-4 py-2 rounded-lg bg-blue-500 bg-opacity-30 hover:bg-opacity-40 hidden">
+                        <i class="fas fa-book mr-2"></i>Profile Dashboard
+                    </a>                    
                     <!-- Always show Books link -->
                     <a href="books.html" class="px-4 py-2 rounded-lg bg-blue-500 bg-opacity-30 hover:bg-opacity-40 hidden">
                         <i class="fas fa-book mr-2"></i>Books Dashboard
