--- a/profile.html
+++ b/profile.html
@@ -35,6 +35,13 @@
             border-bottom: 3px solid #3b82f6;
             color: #3b82f6;
         }
+        .admin-only {
+            display: none;
+        }
+        
+        .role-admin .admin-only {
+            display: block;
+        }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -66,8 +73,8 @@
         <!-- Navigation Tabs -->
         <div class="flex border-b border-gray-200 mb-8">
             <button class="nav-tab active px-6 py-3 font-medium" data-section="profile-dashboard">Profile Dashboard</button>
-            <button class="nav-tab px-6 py-3 font-medium" data-section="reading-history">Reading History</button>
-            <button class="nav-tab px-6 py-3 font-medium" data-section="bookmarks">My Bookmarks</button>
+            <button class="nav-tab px-6 py-3 font-medium admin-only" data-section="reading-history">Reading History</button>
+            <button class="nav-tab px-6 py-3 font-medium admin-only" data-section="bookmarks">My Bookmarks</button>
         </div>
 
         <!-- Profile Dashboard Section -->
@@ -227,6 +234,9 @@
             const joiningDate = formatFirebaseDate(userData.joiningDate);
             const lastActive = formatFirebaseDate(userData.lastActive);
 
+            document.body.classList.add(`role-${userData.role || 'user'}`);
+
+            
             profileContent.innerHTML = `
                 <!-- Profile Header -->
                 <div class="flex flex-col md:flex-row gap-6">
