--- a/books.html
+++ b/books.html
@@ -259,7 +259,7 @@
         </section>
 
         <!-- Admin Book Management Section -->
-        <section id="admin-book-management" class="section-content bg-white shadow-md rounded-lg p-6 mb-8 hidden admin-only">
+        <section id="admin-book-management" class="section-content bg-white shadow-md rounded-lg p-6 mb-8 hidden">
             <h2 class="text-xl font-semibold mb-4">Admin Book Management</h2>
             <button id="add-book" class="bg-blue-500 text-white px-4 py-2 rounded mb-6">Add Book</button>
             <!-- Replace your current Add Book form with this -->
@@ -387,7 +387,7 @@
             </div>
         </section>
         <!-- System Statistics Section -->
-        <section id="system-statistics" class="section-content bg-white shadow-md rounded-lg p-6 mb-8 hidden admin-only">
+        <section id="system-statistics" class="section-content bg-white shadow-md rounded-lg p-6 mb-8 hidden">
             <h2 class="text-xl font-semibold mb-4">System Statistics</h2>
             <div id="user-reports" class="mb-4">
                 <!-- User reports will be dynamically inserted here -->
@@ -398,7 +398,7 @@
         </section>
     
         <!-- Review Management Section -->
-        <section id="review-management" class="section-content bg-white shadow-md rounded-lg p-6 mb-8 hidden admin-only">
+        <section id="review-management" class="section-content bg-white shadow-md rounded-lg p-6 mb-8 hidden">
             <h2 class="text-xl font-semibold mb-4">Review Management</h2>
             <div id="review-list">
                 <!-- Reviews will be dynamically inserted here -->
