--- a/profile.html
+++ b/profile.html
@@ -84,7 +84,7 @@
                 <div class="p-6">
                     <div class="flex justify-between items-center mb-6">
                         <h2 class="text-2xl font-bold text-gray-800">Profile Dashboard</h2>
-                        <button id="toggleEditBtn" class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">
+                        <button id="editBtn" class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">
                             <i class="fas fa-edit mr-2"></i>Edit Profile
                         </button>
                     </div>
