--- a/books.html
+++ b/books.html
@@ -782,7 +782,7 @@
         });
     </script>
     <script type="module">
-      import { auth, db } from './js/firebaseconfig.js';
+      import { auth, db } from './js/firebaseConfig.js';
       import { doc, getDoc } from 'https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js';
       import { onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.8.1/firebase-auth.js';
     
