--- a/bookk.html
+++ b/bookk.html
@@ -156,7 +156,7 @@
         </nav>
 
         <!-- View Books Section -->
-        <section id="view-books" class="section-content bg-white shadow-md rounded-lg p-6 mb-8">
+        <section id="view-books" class="section-content hidden bg-white shadow-md rounded-lg p-6 mb-8">
             <div class="flex">
                 <!-- Sidebar for Sorting and Filtering -->
                 <div class="w-1/4 pr-6 border-r">
@@ -218,7 +218,7 @@
             </div>
         </section>
         <!-- Search Books Section -->
-        <section id="search-books" class="section-content bg-white shadow-md rounded-lg p-6 mb-8">
+        <section id="search-books" class="section-content hidden bg-white shadow-md rounded-lg p-6 mb-8">
             <h2 class="text-xl font-semibold mb-4">Search Books</h2>
             <div class="flex gap-4 mb-6">
                 <input type="text" id="search-input" class="flex-1 px-4 py-2 border rounded" placeholder="Search by title, author, or genre">
@@ -235,7 +235,7 @@
             </div>
         </section>
         <!-- Book Suggestions Section -->
-        <section id="book-suggestions" class="section-content bg-white shadow-md rounded-lg p-6 mb-8">
+        <section id="book-suggestions" class="section-content hidden bg-white shadow-md rounded-lg p-6 mb-8">
             <h2 class="text-xl font-semibold mb-4">Suggest a Book</h2>
             <form id="suggestion-form">
                 <div class="mb-3">
