--- a/bookk.html
+++ b/bookk.html
@@ -260,7 +260,7 @@
             <div id="suggestion-status" class="mt-4"></div>
         </section>
         <!-- Admin Book Management Section -->
-        <section id="admin-book-management" class="section-content admin-only bg-white shadow-md rounded-lg p-6 mb-8">
+        <section id="admin-book-management" class="section-content hidden admin-only bg-white shadow-md rounded-lg p-6 mb-8">
             <h2 class="text-xl font-semibold mb-4">Admin Book Management</h2>
             <button id="add-book" class="bg-blue-500 text-white px-4 py-2 rounded mb-6">Add Book</button>
             <!-- Replace your current Add Book form with this -->
@@ -388,7 +388,7 @@
             </div>
         </section>
         <!-- System Statistics Section -->
-        <section id="system-statistics" class="section-content bg-white shadow-md rounded-lg p-6 mb-8">
+        <section id="system-statistics" class="section-content admin-only hidden bg-white shadow-md rounded-lg p-6 mb-8">
             <h2 class="text-xl font-semibold mb-4">System Statistics</h2>
             <div id="user-reports" class="mb-4">
                 <!-- User reports will be dynamically inserted here -->
