--- a/bookk.html
+++ b/bookk.html
@@ -714,6 +714,7 @@
     </footer>
 
     <!-- Inline JavaScript for Initial Page Setup -->
+    <script>
     document.addEventListener("DOMContentLoaded", () => {
         const allSections = document.querySelectorAll(".section-content");
         const navLinks = document.querySelectorAll(".nav-link");
@@ -771,5 +772,6 @@
             }
         });
     });
+    </script>
 </body>
 </html>
