--- a/bookk.html
+++ b/bookk.html
@@ -107,7 +107,14 @@
         body.role-admin .admin-only.inline {
             display: inline-block !important;
         }
-        
+
+        .nav-link {
+            color: #3b82f6;
+        }
+        .nav-link.hover {
+            background-color: #3b82f6
+            color: white;
+        }
         /* Active tab styling */
         .nav-link.active {
             border-bottom: 2px solid #3b82f6;
