--- a/bookk.html
+++ b/bookk.html
@@ -118,6 +118,8 @@
         .nav-link.active {
             @apply border-blue-600 font-semibold;
             background-color: transparent !important; /* Remove white background */
+            background-color: #3b82f6;
+            color: white;
         }
         
     </style>
