--- a/bookk.html
+++ b/bookk.html
@@ -117,8 +117,7 @@
         
         .nav-link.active {
             @apply border-blue-600 font-semibold;
-            background-color: transparent !important; /* Remove white background */
-            background-color: #3b82f6;
+            background-color: #3b82f6 !important; /* Remove white background */
             color: white;
         }
         
