--- a/bookk.html
+++ b/bookk.html
@@ -27,6 +27,17 @@
 
     <!-- Enhanced CSS Styles -->
     <style>
+        /* Add this at the very top of your CSS */
+        :root {
+            zoom: 0.85; /* For Chrome/Edge */
+            transform: scale(0.85); /* For Firefox */
+            transform-origin: top left;
+        }
+        
+        body {
+            width: 117.65%; /* Counteract scaling (100/0.85) */
+            min-height: 117.65vh;
+        }
         /* Books-specific styles */
         .book-card {
             height: 520px;
