--- a/profile.html
+++ b/profile.html
@@ -18,6 +18,17 @@
 
     <!-- Custom Styles -->
     <style>
+        /* Add this at the very top of your CSS */
+        :root {
+            zoom: 0.85; /* For Chrome/Edge */
+            transform: scale(0.85); /* For Firefox */
+            transform-origin: top left;
+        }
+        
+        body {
+            width: 117.65%; /* Counteract scaling (100/0.85) */
+            min-height: 117.65vh;
+        }
         .avatar-initials {
             font-family: 'Inter', sans-serif;
         }
