--- a/bookk.html
+++ b/bookk.html
@@ -131,7 +131,8 @@
             background-color: #3b82f6 !important; /* Remove white background */
             color: white;
         }
-        
+        .border-b {
+            border-bottom-width: 0px;
     </style>
 </head>
 <body class="bg-gray-50">
