--- a/registration.html
+++ b/registration.html
@@ -237,7 +237,7 @@
                     status: "active"
                 });
 
-                window.location.href = "/books.html";
+                window.location.href = "/digital-library-system/books.html";
             } catch (error) {
                 console.error("Registration error:", error);
                 document.getElementById('errorMsg').textContent = error.message;
