--- a/index.html
+++ b/index.html
@@ -78,12 +78,8 @@
                     <button id="login-button" class="px-4 py-2 rounded-lg bg-blue-500 hover:bg-blue-400">
                         <i class="fas fa-sign-in-alt mr-2"></i>Login
                     </button>
-                    <button 
-                      id="register-button" 
-                      class="px-4 py-2 rounded-lg bg-green-500 hover:bg-green-400"
-                      onclick="window.location.href='registration.html';"
-                    >
-                      <i class="fas fa-user-plus mr-2"></i>Register
+                    <button id="register-button" class="px-4 py-2 rounded-lg bg-green-500 hover:bg-green-400">
+                        <i class="fas fa-user-plus mr-2"></i>Register
                     </button>
                 </nav>
             </div>
@@ -218,6 +214,34 @@
         </div>
     </div>
 
+    <!-- Register Modal -->
+    <div id="register-modal" class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center hidden z-50">
+        <div class="bg-white p-8 rounded-xl shadow-2xl w-full max-w-md modal-content">
+            <div class="flex justify-between items-center mb-6">
+                <h3 class="text-2xl font-bold text-gray-800">Create New Account</h3>
+                <button id="close-register-modal" class="text-gray-400 hover:text-gray-600">
+                    <i class="fas fa-times text-xl"></i>
+                </button>
+            </div>
+            <form id="register" class="space-y-4">
+                <div>
+                    <label for="register-email" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
+                    <input type="email" id="register-email" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" placeholder="your@email.com" required>
+                </div>
+                <div>
+                    <label for="register-password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
+                    <input type="password" id="register-password" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" placeholder="••••••••" required>
+                </div>
+                <button type="submit" class="w-full bg-green-600 text-white py-3 rounded-lg hover:bg-green-700 transition">
+                    <i class="fas fa-user-plus mr-2"></i>Register
+                </button>
+                <p class="text-center text-sm text-gray-600">
+                    Already have an account? <a href="#" id="switch-to-login" class="text-blue-600 hover:underline">Login here</a>
+                </p>
+            </form>
+        </div>
+    </div>
+
     <!-- Forgot Password Modal -->
     <div id="forgot-password-modal" class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center hidden z-50">
         <div class="bg-white p-8 rounded-xl shadow-2xl w-full max-w-md modal-content">
@@ -248,6 +272,7 @@
             const booksLink = document.getElementById('books-link');
             const logoutButton = document.getElementById('logout');
             const loginModal = document.getElementById('login-modal');
+            const registerModal = document.getElementById('register-modal');
             const forgotPasswordModal = document.getElementById('forgot-password-modal');
             const closeLoginModal = document.getElementById('close-login-modal');
             const closeRegisterModal = document.getElementById('close-register-modal');
@@ -263,6 +288,10 @@
                 loginModal.classList.remove('hidden');
             });
 
+            // Show register modal
+            registerButton.addEventListener('click', () => {
+                registerModal.classList.remove('hidden');
+            });
 
             // Switch to login from register
             switchToLogin.addEventListener('click', (e) => {
