--- a/registration.html
+++ b/registration.html
@@ -93,7 +93,7 @@
             // Auth state listener
             auth.onAuthStateChanged(user => {
                 if (user) {
-                    window.location.href = '/books.html';
+                    window.location.href = '/digital-library-system/books.html';
                 } else {
                     document.getElementById('registerForm').style.display = 'block';
                 }
