--- a/registration.html
+++ b/registration.html
@@ -137,7 +137,7 @@
                     });
 
                     // Redirect after registration
-                    window.location.href = '/books.html';
+                    window.location.href = '/digital-library-system/books.html';
 
                 } catch (error) {
                     console.error('Registration error:', error);
