--- a/register.html
+++ b/register.html
@@ -145,7 +145,7 @@
         });
         
         // Redirect to dashboard after successful registration
-        window.location.href = "/books.html";
+        window.location.href = "/digital-library-system/books.html";
         
       } catch (error) {
         console.error("Registration error:", error);
