--- a/register.html
+++ b/register.html
@@ -119,7 +119,7 @@
                       return;
                   }
                   // Redirect only after document verification
-                  window.location.href = "/profile.html";
+                  window.location.href = "/digital-library-system/profile.html";
               } catch (error) {
                   console.error("Document verification error:", error);
               }
