--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                     <button id="login-button" class="px-4 py-2 rounded-lg bg-blue-500 hover:bg-blue-400">
                         <i class="fas fa-sign-in-alt mr-2"></i>Login
                     </button>
-                    <button id="register-button" class="px-4 py-2 rounded-lg bg-green-500 hover:bg-green-400">
+                    <button id="register-button" class="px-4 py-2 rounded-lg bg-green-500 hover:bg-green-400" 
+                            onclick="window.location.href='https://avihs-g.github.io/digital-library-system/register.html'">
                         <i class="fas fa-user-plus mr-2"></i>Register
                     </button>
                 </nav>
