--- a/register.html
+++ b/register.html
@@ -52,6 +52,44 @@
         .role-admin .admin-only {
             display: block;
         }
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 500px;
+            margin: 0 auto;
+            padding: 20px;
+          }
+          .form-group {
+            margin-bottom: 15px;
+          }
+          label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+          }
+          input, select {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+          }
+          button {
+            background-color: #4285f4;
+            color: white;
+            border: none;
+            padding: 12px 20px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            width: 100%;
+          }
+          button:hover {
+            background-color: #3367d6;
+          }
+          .error {
+            color: red;
+            margin-top: 10px;
+          }
     </style>
 </head>
 <body class="bg-gray-50">
