--- a/register.html
+++ b/register.html
@@ -17,8 +17,16 @@
  
     <!-- Custom Styles -->
     <style>
+        /* Add this at the very top of your CSS */
+        :root {
+            zoom: 0.85; /* For Chrome/Edge */
+            transform: scale(0.85); /* For Firefox */
+            transform-origin: top left;
+        }
+        
         body {
-            font-family: Arial, sans-serif;
+            width: 117.65%; /* Counteract scaling (100/0.85) */
+            min-height: 117.65vh;
         }
         .avatar-initials {
             font-family: 'Inter', sans-serif;
@@ -59,12 +67,6 @@
                     <a href="index.html" class="px-4 py-2 rounded-lg bg-blue-500 bg-opacity-20 hover:bg-opacity-30">
                         <i class="fas fa-home mr-2"></i>Home
                     </a>
-                    <a href="books.html" class="px-4 py-2 rounded-lg bg-blue-500 bg-opacity-30 hover:bg-opacity-40">
-                        <i class="fas fa-book mr-2"></i>Books Dashboard
-                    </a>
-                    <button id="logout" class="px-4 py-2 rounded-lg bg-white text-blue-600 hover:bg-gray-100">
-                        <i class="fas fa-sign-out-alt mr-2"></i>Logout
-                    </button>
                 </nav>
             </div>
         </div>
