--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-4 md:mb-0">
-                    <h1 class="text-3xl font-bold tracking-tight">Digital Library</h1>
+                    <h1 class="text-3xl font-bold tracking-tight">Digital Library System</h1>
                     <p class="text-blue-100 mt-1">Your gateway to knowledge</p>
                 </div>
                 <nav class="flex items-center space-x-4 nav-buttons">
@@ -175,7 +175,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-4 md:mb-0">
-                    <p>&copy; 2023 Digital Library System. All rights reserved.</p>
+                    <p>&copy; 2025 Digital Library System. All rights reserved.</p>
                 </div>
                 <div class="flex space-x-4">
                     <a href="#" class="hover:text-blue-200"><i class="fab fa-facebook-f"></i></a>
