--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,4 @@
-Here is the HTML version of your `README.md` content:
 
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +6,41 @@ Here is the HTML version of your `README.md` content:
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Library System</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+      <style>
+    /* Set basic styling for the body */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f7f7f7;
+    }
+
+    /* Container to wrap all content */
+    .container {
+      width: 80%;
+      max-width: 1200px;
+      padding: 20px;
+      background-color: #fff;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+    }
+
+    /* Styling for the heading */
+    h1 {
+      text-align: center;
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+
+    /* Styling for the content */
+    p {
+      font-size: 1rem;
+      line-height: 1.6;
+    }
+  </style>
 </head>
 <body class="bg-gray-100 text-gray-900">
 
