--- a/readme.html
+++ b/readme.html
@@ -292,4 +292,18 @@ cd digital-library-system</pre>
             <li><strong>Ramakrishna</strong> – Faculty mentor, Guided team throughout the project.</li>
         </ul>
 
-        <hr class
+        <hr class="my-6">
+        <p>Special thanks to the following contributors:</p>
+        <ul class="list-disc pl-6 mb-4">
+            <li>Faculty mentor, External Support & <strong>AI Tools</strong> - Assisted in code generation and documentation</li>
+        </ul>
+
+        <hr class="my-6">
+
+        <h2 id="license" class="text-2xl font-semibold mb-4">📄 License</h2>
+        <p>This project is licensed under the MIT License - see the <a href="LICENSE" class="text-blue-500">LICENSE</a> file for details.</p>
+
+    </div>
+</body>
+</html>
+
